--- a/public/style1/index.html
+++ b/public/style1/index.html
@@ -12,6 +12,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="styles.css" />
     <!-- /Stylesheets -->
   </head>
   <body>
@@ -72,9 +73,7 @@
               <span class="experience-institution">Snack Edouard</span>
             </h4>
             <div class="experience-details">
-              <span class="experience-location">
-                Paris
-              </span>
+              <span class="experience-location"> Paris </span>
               <span class="experience-date">
                 <span class="day">30</span>
                 <span class="experience-date-separator">/</span>
@@ -98,9 +97,7 @@
               <span class="experience-institution">Snack Edouard</span>
             </h4>
             <div class="experience-details">
-              <span class="experience-location">
-                Paris
-              </span>
+              <span class="experience-location"> Paris </span>
               <span class="experience-date">
                 <span class="day">30</span>
                 <span class="experience-date-separator">/</span>
@@ -127,9 +124,7 @@
               <span class="experience-institution">Codi</span>
             </h4>
             <div class="experience-details">
-              <span class="experience-location">
-                Beirut
-              </span>
+              <span class="experience-location"> Beirut </span>
               <span class="experience-date">
                 <span class="day">30</span>
                 <span class="experience-date-separator">/</span>
@@ -153,9 +148,7 @@
               <span class="experience-institution">Snack Edouard</span>
             </h4>
             <div class="experience-details">
-              <span class="experience-location">
-                Paris
-              </span>
+              <span class="experience-location"> Paris </span>
               <span class="experience-date">
                 <span class="day">30</span>
                 <span class="experience-date-separator">/</span>
